force-app/main/default/objects/M_A_Lead__c/M_A_Lead__c.object-meta.xml
<CustomObject>
    <description>For M&amp;A Division Only</description>
    <label>M&amp;A Lead</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;A Leads</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>