force-app/main/default/objects/M_A_Lead__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Applicable for North America only</description>
    <inlineHelpText>Applicable for North America only</inlineHelpText>
    <label>Area / Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_Picklist__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mountain Central</fullName>
            </value>
            <value>
                <fullName>North Central</fullName>
            </value>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>