force-app/main/default/objects/M_A_Lead__c/fields/Country_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_Text__c</fullName>
    <label>Country Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>