force-app/main/default/objects/M_A_Lead__c/fields/Market_City__c.field-meta.xml
<CustomField>
    <fullName>Market_City__c</fullName>
    <description>Applicable for North America only</description>
    <inlineHelpText>Applicable for North America only</inlineHelpText>
    <label>Market / City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Territory_State_Province__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alaska</fullName>
            </value>
            <value>
                <fullName>Albany</fullName>
            </value>
            <value>
                <fullName>Albuquerque</fullName>
            </value>
            <value>
                <fullName>Allentown</fullName>
            </value>
            <value>
                <fullName>Asheville</fullName>
            </value>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Baton Rouge</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Boise</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Buffalo</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Carlsbad</fullName>
            </value>
            <value>
                <fullName>Cedar Rapids</fullName>
            </value>
            <value>
                <fullName>Central Valley</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Chattanooga</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
            <value>
                <fullName>Cleveland</fullName>
            </value>
            <value>
                <fullName>Colorado Springs</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>Dakotas</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Des Moines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>