force-app/main/default/objects/M_A_Lead__c/fields/Territory_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Territory_State_Province__c</fullName>
    <label>Operating Unit / State / Province</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Arizona / Nevada</fullName>
            </value>
            <value>
                <fullName>Atlanta / Jax</fullName>
            </value>
            <value>
                <fullName>Big South</fullName>
            </value>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Canada Central</fullName>
            </value>
            <value>
                <fullName>Canada - Central</fullName>
            </value>
            <value>
                <fullName>Canada East</fullName>
            </value>
            <value>
                <fullName>Canada - East</fullName>
            </value>
            <value>
                <fullName>Canada West</fullName>
            </value>
            <value>
                <fullName>Canada - West</fullName>
            </value>
            <value>
                <fullName>Carlsbad</fullName>
            </value>
            <value>
                <fullName>Carolinas</fullName>
            </value>
            <value>
                <fullName>Central States</fullName>
            </value>
            <value>
                <fullName>Chesapeake</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Chicago / Milwaukee</fullName>
            </value>
            <value>
                <fullName>CT / WNY</fullName>
            </value>
            <value>
                <fullName>Dallas, AR, OK &amp; TU</fullName>
            </value>
            <value>
                <fullName>Florida / PR</fullName>
            </value>
            <value>
                <fullName>Greater Northwest</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Great Plains</fullName>
            </value>
            <value>
                <fullName>Gulf Lakes</fullName>
            </value>
            <value>
                <fullName>Houston, AU, SA, NM &amp; EP</fullName>
            </value>
            <value>
                <fullName>IN / MI / OH</fullName>
            </value>
            <value>
                <fullName>LA / AL / MS</fullName>
            </value>
            <value>
                <fullName>MD / VA</fullName>
            </value>
            <value>
                <fullName>Mid Atlantic</fullName>
            </value>
            <value>
                <fullName>Mid South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>