force-app/main/default/objects/M_A_Lead__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>This will only be used for the Data Migration</description>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>