force-app/main/default/objects/M_A_Lead__c/recordTypes/Converted_Lead.recordType-meta.xml
<RecordType>
    <fullName>Converted_Lead</fullName>
    <active>true</active>
    <description>for M&amp;A Converted Leads</description>
    <label>Converted Lead</label>
</RecordType>