force-app/main/default/objects/M_A_Lead__c/recordTypes/Lead.recordType-meta.xml
<RecordType>
    <fullName>Lead</fullName>
    <active>true</active>
    <description>For M&amp;A Unconverted Leads only</description>
    <label>Lead</label>
</RecordType>