force-app/main/default/objects/M_A_Lead__c/listViews/All_Converted_Leads.listView-meta.xml
<ListView>
    <fullName>All_Converted_Leads</fullName>
    <columns>NAME</columns>
    <columns>Main_Phone__c</columns>
    <columns>Status__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Direct_Phone__c</columns>
    <columns>Email__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>M_A_Lead__c.Converted_Lead</value>
    </filters>
    <label>All Converted Leads</label>
    <language>en_US</language>
</ListView>