force-app/main/default/objects/M_A_Lead__c/listViews/My_Open_Leads.listView-meta.xml
<ListView>
    <fullName>My_Open_Leads</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>M_A_Lead__c.Lead</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>nkwan</value>
    </filters>
    <label>My Open Leads_NK</label>
    <language>en_US</language>
</ListView>